--- a/plugin-platform/src/main/resources/application.properties
+++ b/plugin-platform/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-management.endpoints.web.exposure.include=health,info,restart,refresh
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
 management.endpoint.restart.enabled=true
+spring.mvc.servlet.path=/app
